Improved responsiveness slightly + added axis image

--- a/documentation.html
+++ b/documentation.html
@@ -47,9 +47,10 @@
 <hr />
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie, dui nec posuere suscipit, mi risus condimentum orci, id tristique augue neque a nunc. Nulla vestibulum mattis ullamcorper. Vestibulum et nibh massa. Vivamus sem augue, convallis sed venenatis a, tincidunt a arcu. Morbi vel volutpat ante, ut sodales ligula. Ut quis consequat sem. Nulla sed porttitor massa. Cras tempus magna ut placerat blandit. Phasellus est mi, vestibulum laoreet auctor a, pretium porttitor magna. Nulla eget accumsan erat, et gravida dui. Mauris dapibus sed purus aliquam blandit. Morbi at malesuada ligula.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in elit at ipsum ullamcorper viverra sit amet vel leo.
+                <img src="images/flexbox-axis.png" width="60%" height="auto" />
             </p>
-
+            
 <hr />
 
             <div id="flex-container" class="h2">Flex Container</div>
