Added links to examples

--- a/examples.html
+++ b/examples.html
@@ -10,9 +10,9 @@
             <div class="title m-b-md">Flexbox Examples</div>
 
             <div class="links">
-                <a href="documentation.html">Documentation</a>
-                <a href="examples.html">Examples</a>
-                <a href="resources.html">Resources</a>
+                <a href="examples/holy-grail/holy-grail.html">Holy Grail Layout</a>
+                <a href="examples/simple-navbar/simple-navbar.html">Simple Nav</a>
+                <a href="examples/simple-sidebar/simple-sidebar.html">Simple Sidebar</a>
             </div>
         </div>
     </div>
