Added tiles example

--- a/examples/simple-sidebar/index.html
+++ b/examples/simple-sidebar/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Flexbox Sidebar</title>
-  <link rel="stylesheet" type="text/css" href="simple-sidebar.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
   <div class="sidebar">
