--- a/examples.html
+++ b/examples.html
@@ -10,9 +10,10 @@
             <div class="title m-b-md">Flexbox Examples</div>
 
             <div class="links">
-                <a href="examples/holy-grail/holy-grail.html">Holy Grail Layout</a>
-                <a href="examples/simple-navbar/simple-navbar.html">Simple Nav</a>
-                <a href="examples/simple-sidebar/simple-sidebar.html">Simple Sidebar</a>
+                <a href="examples/tiles/index.html">Tiles</a>
+                <a href="examples/holy-grail/index.html">Holy Grail Layout</a>
+                <a href="examples/simple-navbar/index.html">Simple Nav</a>
+                <a href="examples/simple-sidebar/index.html">Simple Sidebar</a>
             </div>
         </div>
     </div>
