--- a/examples/holy-grail/index.html
+++ b/examples/holy-grail/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Flexbox Holy Grail</title>
-    <link rel="stylesheet" href="holy-grail.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
