--- a/examples/simple-navbar/index.html
+++ b/examples/simple-navbar/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Flexbox Navbar</title>
-  <link rel="stylesheet" type="text/css" href="simple-navbar.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
   <nav>
