Improved examples slightly

--- a/examples/simple-navbar/index.html
+++ b/examples/simple-navbar/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <nav>
-    <a href=""><i class="fa fa-home"></i>Home</a>
-    <a href=""><i class="fa fa-question"></i>About</a>
-    <a href=""><i class="fa fa-phone"></i>Contact</a>
-    <a href=""><i class="fa fa-paw"></i>Dogs</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
   </nav>
 </body>
 </html>
