Added another example [Images & Text]

--- a/examples.html
+++ b/examples.html
@@ -12,6 +12,7 @@
             <div class="links">
                 <a href="examples/tiles/index.html">Tiles</a>
                 <a href="examples/holy-grail/index.html">Holy Grail Layout</a>
+                <a href="examples/image-text/index.html">Images & Text</a>
                 <a href="examples/simple-navbar/index.html">Simple Nav</a>
             </div>
         </div>
