Initialised flexbox interactive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
             <div class="links">
                 <a href="documentation.html">Documentation</a>
+                <a href="interactive.html">Interactive</a>
                 <a href="examples.html">Examples</a>
                 <a href="resources.html">Resources</a>
             </div>
