--- a/interactive.html
+++ b/interactive.html
@@ -10,10 +10,18 @@
         <div class="content">
             <div class="title m-b-md">Flexbox Interactive</div>
 
+<hr />
+
+            <div class="h2">
+                Flex Container
+            </div>
+
             <div class="links mb-1">
                 <a href="#flex-direction-controller">Flex Direction</a>
                 <a href="#flex-wrap-controller">Flex Wrap</a>
                 <a href="#justify-content-controller">Justify Content</a>
+                <a href="#align-items-controller">Align Items</a>
+                <a href="#align-content-controller">Align Content</a>
             </div>
 
 <hr />
@@ -120,6 +128,48 @@
                 </div>
 
             </div>
+
+<!-- ------------------------------------------------------------------------ -->
+
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Align Content</div>
+                <div id="align-content-controller" class="controller mb-1">
+                    <form action="">
+                        <input name="align-content" type="radio" id="R51" value="ac-stretch" checked><label for="R51">stretch:</label>
+                        <input name="align-content" type="radio" id="R52" value="ac-flex-start"><label for="R52">flex-start:</label>
+                        <input name="align-content" type="radio" id="R53" value="ac-flex-end"><label for="R53">flex-end:</label>
+                        <input name="align-content" type="radio" id="R54" value="ac-center"><label for="R54">center:</label>
+                        <input name="align-content" type="radio" id="R55" value="ac-space-around"><label for="R55">space-around:</label>
+                        <input name="align-content" type="radio" id="R56" value="ac-space-between"><label for="R56">space-between:</label>
+                    </form>
+                </div>
+                <div id="align-content" class="flex-container mb-1 flex-cont-height-400 fw-wrap flex-item-width-300 ac-stretch">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3"><p>3</p></div>
+                    <div class="flex-item item4"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+
+<hr />
+
+            <div class="h2">
+                Flex Items
+            </div>
+
+            <div class="links mb-1">
+                <a href="#align-self-controller">Align Self</a>
+                <a href="#order-controller">Order</a>
+                <a href="#flex-controller">Flex</a>
+            </div>
+
+<hr />
 
         </div>
     </div>
