Added 'align-self' item to interactive

--- a/interactive.html
+++ b/interactive.html
@@ -171,6 +171,32 @@
 
 <hr />
 
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Align Self</div>
+                <div id="align-self-controller" class="controller mb-1">
+                    <form action="">
+                        <input name="align-self" type="radio" id="R61" value="as-stretch" checked><label for="R61">stretch:</label>
+                        <input name="align-self" type="radio" id="R62" value="as-flex-start"><label for="R62">flex-start:</label>
+                        <input name="align-self" type="radio" id="R63" value="as-flex-end"><label for="R63">flex-end:</label>
+                        <input name="align-self" type="radio" id="R64" value="as-center"><label for="R64">center:</label>
+                        <input name="align-self" type="radio" id="R65" value="as-baseline"><label for="R65">baseline:</label>
+                        <input name="align-self" type="radio" id="R66" value="as-auto"><label for="R66">auto:</label>
+                    </form>
+                </div>
+                <div id="align-self" class="flex-container mb-1 flex-cont-height-200 flex-item-font-alt">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3 active as-stretch"><p>3</p></div>
+                    <div class="flex-item item4 active as-stretch"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6 active as-stretch"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
