Added 'order' item to interactive

--- a/interactive.html
+++ b/interactive.html
@@ -197,6 +197,36 @@
 
             </div>
 
+<!-- ------------------------------------------------------------------------ -->
+
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Order</div>
+                <div id="order-controller" class="controller mb-1">
+                    <form action="">
+                        <label for="R71">1:</label><input name="order" type="number" id="R71" class="item1" value="0" />
+                        <label for="R72">2:</label><input name="order" type="number" id="R72" class="item2" value="0" />
+                        <label for="R73">3:</label><input name="order" type="number" id="R73" class="item3" value="0" />
+                        <label for="R74">4:</label><input name="order" type="number" id="R74" class="item4" value="0" />
+                        <label for="R75">5:</label><input name="order" type="number" id="R75" class="item5" value="0" />
+                        <label for="R76">6:</label><input name="order" type="number" id="R76" class="item6" value="0" />
+                        <label for="R77">7:</label><input name="order" type="number" id="R77" class="item7" value="0" />
+                        <label for="R78">8:</label><input name="order" type="number" id="R78" class="item8" value="0" />
+                    </form>
+                </div>
+                <div id="order" class="flex-container mb-1">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3"><p>3</p></div>
+                    <div class="flex-item item4"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
