Added 'flex-basis' item to interactive

--- a/interactive.html
+++ b/interactive.html
@@ -50,7 +50,7 @@
 
             </div>
 
-<!-- ------------------------------------------------------------------------ -->
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
@@ -75,7 +75,7 @@
 
             </div>
 
-<!-- ------------------------------------------------------------------------ -->
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
@@ -102,7 +102,7 @@
 
             </div>
 
-<!-- ------------------------------------------------------------------------ -->
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
@@ -129,7 +129,7 @@
 
             </div>
 
-<!-- ------------------------------------------------------------------------ -->
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
@@ -197,7 +197,7 @@
 
             </div>
 
-<!-- ------------------------------------------------------------------------ -->
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
@@ -215,6 +215,39 @@
                     </form>
                 </div>
                 <div id="order" class="flex-container mb-1">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3"><p>3</p></div>
+                    <div class="flex-item item4"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+<!-- ======================================================================== -->
+
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Flex Basis</div>
+                <div id="flex-basis-controller" class="controller mb-1">
+                    <form action="" class="mb-1">
+                        <input name="flex-basis-direction" type="radio" id="R89" value="fd-row" checked><label for="R89">row:</label>
+                        <input name="flex-basis-direction" type="radio" id="R801" value="fd-column"><label for="R801">column:</label>
+                    </form>
+                    <form action="">
+                        <label for="R81">1:</label><input name="flex-basis" type="number" id="R81" class="item1" value="100" />
+                        <label for="R82">2:</label><input name="flex-basis" type="number" id="R82" class="item2" value="100" />
+                        <label for="R83">3:</label><input name="flex-basis" type="number" id="R83" class="item3" value="100" />
+                        <label for="R84">4:</label><input name="flex-basis" type="number" id="R84" class="item4" value="100" />
+                        <label for="R85">5:</label><input name="flex-basis" type="number" id="R85" class="item5" value="100" />
+                        <label for="R86">6:</label><input name="flex-basis" type="number" id="R86" class="item6" value="100" />
+                        <label for="R87">7:</label><input name="flex-basis" type="number" id="R87" class="item7" value="100" />
+                        <label for="R88">8:</label><input name="flex-basis" type="number" id="R88" class="item8" value="100" />
+                    </form>
+                </div>
+                <div id="flex-basis" class="flex-container mb-1 fw-wrap interactive-fb-100 row">
                     <div class="flex-item item1"><p>1</p></div>
                     <div class="flex-item item2"><p>2</p></div>
                     <div class="flex-item item3"><p>3</p></div>
