Added 'flex-grow, flex-shrink' item to interactive

--- a/interactive.html
+++ b/interactive.html
@@ -227,24 +227,94 @@
 
             </div>
 <!-- ======================================================================== -->
+<!-- Flex -->
+<!-- ======================================================================== -->
+
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Flex Grow</div>
+                <div id="flex-grow-controller" class="controller mb-1">
+                    <form action="" class="mb-1">
+                        <input name="flex-grow-direction" type="radio" id="R89" value="fd-row" checked><label for="R89">row:</label>
+                        <input name="flex-grow-direction" type="radio" id="R801" value="fd-column"><label for="R801">column:</label>
+                    </form>
+                    <form action="">
+                        <label for="R81">1:</label><input name="flex-grow" type="number" id="R81" class="item1" value="1" />
+                        <label for="R82">2:</label><input name="flex-grow" type="number" id="R82" class="item2" value="1" />
+                        <label for="R83">3:</label><input name="flex-grow" type="number" id="R83" class="item3" value="1" />
+                        <label for="R84">4:</label><input name="flex-grow" type="number" id="R84" class="item4" value="1" />
+                        <label for="R85">5:</label><input name="flex-grow" type="number" id="R85" class="item5" value="1" />
+                        <label for="R86">6:</label><input name="flex-grow" type="number" id="R86" class="item6" value="1" />
+                        <label for="R87">7:</label><input name="flex-grow" type="number" id="R87" class="item7" value="1" />
+                        <label for="R88">8:</label><input name="flex-grow" type="number" id="R88" class="item8" value="1" />
+                    </form>
+                </div>
+                <div id="flex-grow" class="flex-container mb-1 interactive-fg-1 row">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3"><p>3</p></div>
+                    <div class="flex-item item4"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+
+<!-- ======================================================================== -->
+
+            <div class="flex-example mb-05 mt-1">
+
+                <div class="h3">Flex Shrink</div>
+                <div id="flex-shrink-controller" class="controller mb-1">
+                    <form action="" class="mb-1">
+                        <input name="flex-shrink-direction" type="radio" id="R99" value="fd-row" checked><label for="R99">row:</label>
+                        <input name="flex-shrink-direction" type="radio" id="R901" value="fd-column"><label for="R901">column:</label>
+                    </form>
+                    <form action="">
+                        <label for="R91">1:</label><input name="flex-shrink" type="number" id="R91" class="item1" value="1" />
+                        <label for="R92">2:</label><input name="flex-shrink" type="number" id="R92" class="item2" value="1" />
+                        <label for="R93">3:</label><input name="flex-shrink" type="number" id="R93" class="item3" value="1" />
+                        <label for="R94">4:</label><input name="flex-shrink" type="number" id="R94" class="item4" value="1" />
+                        <label for="R95">5:</label><input name="flex-shrink" type="number" id="R95" class="item5" value="1" />
+                        <label for="R96">6:</label><input name="flex-shrink" type="number" id="R96" class="item6" value="1" />
+                        <label for="R97">7:</label><input name="flex-shrink" type="number" id="R97" class="item7" value="1" />
+                        <label for="R98">8:</label><input name="flex-shrink" type="number" id="R98" class="item8" value="1" />
+                    </form>
+                </div>
+                <div id="flex-shrink" class="flex-container mb-1 interactive-fs-1 interactive-fb-100 row">
+                    <div class="flex-item item1"><p>1</p></div>
+                    <div class="flex-item item2"><p>2</p></div>
+                    <div class="flex-item item3"><p>3</p></div>
+                    <div class="flex-item item4"><p>4</p></div>
+                    <div class="flex-item item5"><p>5</p></div>
+                    <div class="flex-item item6"><p>6</p></div>
+                    <div class="flex-item item7"><p>7</p></div>
+                    <div class="flex-item item8"><p>8</p></div>
+                </div>
+
+            </div>
+
+<!-- ======================================================================== -->
 
             <div class="flex-example mb-05 mt-1">
 
                 <div class="h3">Flex Basis</div>
                 <div id="flex-basis-controller" class="controller mb-1">
                     <form action="" class="mb-1">
-                        <input name="flex-basis-direction" type="radio" id="R89" value="fd-row" checked><label for="R89">row:</label>
-                        <input name="flex-basis-direction" type="radio" id="R801" value="fd-column"><label for="R801">column:</label>
+                        <input name="flex-basis-direction" type="radio" id="R109" value="fd-row" checked><label for="R109">row:</label>
+                        <input name="flex-basis-direction" type="radio" id="R1001" value="fd-column"><label for="R1001">column:</label>
                     </form>
                     <form action="">
-                        <label for="R81">1:</label><input name="flex-basis" type="number" id="R81" class="item1" value="100" />
-                        <label for="R82">2:</label><input name="flex-basis" type="number" id="R82" class="item2" value="100" />
-                        <label for="R83">3:</label><input name="flex-basis" type="number" id="R83" class="item3" value="100" />
-                        <label for="R84">4:</label><input name="flex-basis" type="number" id="R84" class="item4" value="100" />
-                        <label for="R85">5:</label><input name="flex-basis" type="number" id="R85" class="item5" value="100" />
-                        <label for="R86">6:</label><input name="flex-basis" type="number" id="R86" class="item6" value="100" />
-                        <label for="R87">7:</label><input name="flex-basis" type="number" id="R87" class="item7" value="100" />
-                        <label for="R88">8:</label><input name="flex-basis" type="number" id="R88" class="item8" value="100" />
+                        <label for="R101">1:</label><input name="flex-basis" type="number" id="R101" class="item1" value="100" />
+                        <label for="R102">2:</label><input name="flex-basis" type="number" id="R102" class="item2" value="100" />
+                        <label for="R103">3:</label><input name="flex-basis" type="number" id="R103" class="item3" value="100" />
+                        <label for="R104">4:</label><input name="flex-basis" type="number" id="R104" class="item4" value="100" />
+                        <label for="R105">5:</label><input name="flex-basis" type="number" id="R105" class="item5" value="100" />
+                        <label for="R106">6:</label><input name="flex-basis" type="number" id="R106" class="item6" value="100" />
+                        <label for="R107">7:</label><input name="flex-basis" type="number" id="R107" class="item7" value="100" />
+                        <label for="R108">8:</label><input name="flex-basis" type="number" id="R108" class="item8" value="100" />
                     </form>
                 </div>
                 <div id="flex-basis" class="flex-container mb-1 fw-wrap interactive-fb-100 row">
