--- a/interactive.html
+++ b/interactive.html
@@ -166,7 +166,9 @@
             <div class="links mb-1">
                 <a href="#align-self-controller">Align Self</a>
                 <a href="#order-controller">Order</a>
-                <a href="#flex-controller">Flex</a>
+                <a href="#flex-grow-controller">Flex Grow</a>
+                <a href="#flex-shrink-controller">Flex Shrink</a>
+                <a href="#flex-basis-controller">Flex Basis</a>
             </div>
 
 <hr />
